[project]
name = "auth-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]
