[project]
name = "auth-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "bcrypt>=5.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
